# strain_gauge_sensor

./: .gitignore  .mxproject  CMakeLists.txt  README.md  STM32G474XX_FLASH.ld  strain_gauge_sensor.ioc
Hardware/: CMakeLists.txt
Hardware/Inc/: hx711_driver.h
Hardware/Src/: hx711_driver.cpp
Modules/: CMakeLists.txt
Modules/Inc/: adc.h  adc_interface.h  adc_module.h  adc_opamp.h  command.h  d_adc.h  device.h  helper.h  hx711.h  interface.h  multiplekser.h  scheduler.h  serializer.h  temp_module.h  timmer_interface.h  types.h  usart_control.h
Modules/Src/: adc.cpp  adc_interface.cpp  adc_module.cpp  adc_opamp.cpp  command.cpp  d_adc.cpp  device.cpp  helper.cpp  hx711.cpp  interface.cpp  multiplekser.cpp  scheduler.cpp  serializer.cpp  temp_module.cpp  timmer_interface.cpp  usart_control.cpp
chart/: 1.5_bar_2026_04_30.09.html  COM3_2026_03_10.08.13.05.093.html  COM3_2026_03_14.09.51.08.235.html  COM3_2026_03_15.10.45.46.753.html  COM3_2026_03_15.13.05.27.665.html  COM3_2026_03_15.13.51.23.791.html  COM3_2026_04_22.08.49.29.106.html  COM3_2026_04_22.18.49.31.131.html  COM3_2026_04_23.02.54.10.725.html  COM3_2026_04_23.09.04.09.015.html  COM3_2026_04_23.19.33.06.563.html  COM3_2026_04_24.01.18.26.494.html  COM3_2026_04_27.17.00.57.890.html  COM3_2026_04_28.00.03.37.298.html  COM3_2026_04_28.08.55.06.567.html  COM3_2026_04_28.17.26.04.305.html  COM3_2026_04_29.00.05.59.460.html  COM3_2026_04_29.08.13.09.483.html  COM3_2026_04_29.18.32.17.172.html  COM6_2026_03_15.13.05.07.855.html  temperature_coef_comparision.html  test_1_.html
csv/: 1.5_bar_2026_04_30.09.csv  (+20 more)
(+58 files in other folders)
